--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core : ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.18.1
   google_fonts: ^1.1.0
   http: ^0.12.2
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+1
+  provider: ^4.3.2+1
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
